--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,16 @@
-div{
-  display: flex;
-  flex-wrap: wrap;
+div {
+  display: grid;
   grid-template-columns: 40% 40%;
   gap: 20%;
+}
+
+nav {
+  display: inline-block;
+  width: 80%;
+}
+
+nav img {
+  width: 10%;
 }
 body {
   font-size: 150%;
